<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:stretchColumns="0, 1, 2, 3, 4, 5, 6, 7"
        tools:context=".MyActivity">

        <!--<TextView
            android:id="@+id/G1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dip"
            android:gravity="center"
            android:background="@drawable/textview_border_white"
            android:text="@string/G1" />

        <TextView
            android:id="@+id/H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dip"
            android:gravity="center"
            android:background="@drawable/textview_border_blue"
            android:text="@string/H1" />-->
</TableLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="220dp"
        android:onClick="restart"
        android:text="@string/restart" />

    <Button
        android:id="@+id/pause"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="155dp"
        android:onClick="pause"
        android:text="@string/pause" />

    <TextView
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="235dp"
        android:text="@string/show"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="200dp"
        android:text="@string/score"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/hit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="165dp"
        android:text="@string/hit"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/miss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="130dp"
        android:text="@string/miss"
        android:textSize="20sp"/>


</RelativeLayout>
